# collections

./: .gitignore  README.md
face_recognition/imgs/: ds_facenet_opencv_v2.pkl
face_recognition/src/: main.py
mysql_test/: Makefile  test_sqlcon.c
openai/: chat.py
sockets/: client  client.c  crossp_server.c  server  server.c  unix_client.c  unix_server.c  win_server.c
zhbk1/: CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
zhbk1/assets/: zhbk1.conf
zhbk1/inc/: language.h  main.h  tabledata.h  zhbk.h
zhbk1/installer/: Makefile  ZHBK setup project.ifp  installer.c
zhbk1/src/: main.c  zhbk.c
